styled home, pricing and about-us pages

--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -1,25 +1,31 @@
 .footer{
-    background: #e6f7e0;
-    height: 25vh;
+    height: 45vh;
     padding-top: 2em;
 }
-.footer-head{
+.footer-above{
     display: flex;
     justify-content: space-between;
     margin: 0 5%;
 }
+.footer-above img{
+    height: 5vh;
+}
+.footer-above span{
+    color: #b4b3b3;
+}
 .footer-line{
     width: 40%;
-    border: 1px solid #3ebf0f;
+    border: 1px solid #b4b3b3;
+    margin-left: 30%;
+}
+.footer-below{
+    text-align: center;
 }
 .media{
     margin: 1% 0 0 2%;
 }
 .media-icon{
     margin-right: 3%;
-}
-.footer p{
-    margin-top: 1%;
 }
 @media screen and (max-width: 767px) {
     .footer-logo{
