--- a/src/components/FAQs/FAQs.styles.css
+++ b/src/components/FAQs/FAQs.styles.css
@@ -1,15 +1,33 @@
-.faqs{
+.faqs {
     display: flex;
     justify-content: space-between;
-    margin: 5%;
+    background: #fafafa;
+    padding: 2em;
 }
 .questions{
     width: 50%;
 }
 .accordion-body{
     text-align: left;
+    background: #fafafa;
 }
-
+.accordion-item{
+    border: none !important;
+    border-bottom: 1px solid #d6d6d6 !important;
+}
+.accordion-button{
+    background: #fafafa !important;
+}
+.see-all{
+    height: 5vh;
+    width: 10vw;
+    color: #ffffff;
+    background: #3ebf0f;
+    border: none;
+    border-radius: 5px;
+    padding: 0.3em;
+    margin-top: 3%;
+}
 @media screen and (max-width: 767px) {
     .faqs{
         flex-direction: column;
