--- a/src/components/nav/nav.styles.css
+++ b/src/components/nav/nav.styles.css
@@ -3,9 +3,19 @@
     justify-content: space-between;
     padding: 1em;
     border-bottom: 0.5px solid #3ebf0f;
+    width: auto;
 }
 .nav img{
     margin-left: 3%;
+    height: 5vh;
+}
+ul{
+    display: flex;
+    list-style-type: none;
+}
+li{
+    padding-right: 2em;
+    color: #000000;
 }
 .create{
     height: 5vh;
@@ -15,13 +25,25 @@
     border: none;
     border-radius: 5px;
     padding: 0.3em;
+    margin-left: 1%;
 }
 .link{
     text-decoration: none;
-    color: #ffffff;
+}
+.sign-in{
+    height: 5vh;
+    width: 5vw;
+    border: 1px solid #3ebf0f;
+    border-radius: 5px;
+    background: #ffffff;
+    color: #3ebf0f;
 }
 .link:hover{
     color: #ffffff;
+}
+.nav-buttons{
+    display: flex;
+    margin-left: -10%;
 }
 @media screen and (max-width: 767px) {
     .nav img{
