--- a/src/components/benefits/benefits.styles.css
+++ b/src/components/benefits/benefits.styles.css
@@ -1,5 +1,6 @@
 .benefits{
     text-align: center;
+    margin-top: 5%;
 }
 .benefits-cards{
     display: flex;
@@ -9,8 +10,8 @@
 .benefits-card{
     background: #eff5fb;
     border-radius: 5px;
-    width: 40vw;
-    height: 50vh;
+    width: 42vw;
+    height: 40vh;
     padding: 1em;
     margin: 0 1% 1% 0;
     text-align: left;
