--- a/src/components/features/features.styles.css
+++ b/src/components/features/features.styles.css
@@ -1,3 +1,36 @@
 .features{
     text-align: center;
+    margin-top: 5%;
+}
+.features span{
+    color: #115bc7;
+}
+.features-cards{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5% 0 0 8%;
+}
+.features-card{
+    border-radius: 5px;
+    width: 29vw;
+    height: 40vh;
+    padding: 1em;
+    margin: 0 1% 1% 0;
+    text-align:left;
+}
+.feature-icon{
+    background: #f2fbef;
+    border-radius: 50%;
+    padding: 0.5em;
+    height: 7vh;
+    margin-bottom: 3%;
+}
+.nativetalk-button {
+    height: 5vh;
+    width: 25vw;
+    color: #ffffff;
+    background: #3ebf0f;
+    border: none;
+    border-radius: 5px;
+    padding: 0.3em;
 }
